# Catrina

./: .gitignore  CHANGELOG.md  Parsing.LangDef  README.md  TODO.md  catrina.cabal  catrina.nix  default.nix  result
.github/workflows/: release.yml
.velle/: main.cfg
app/: Errors.hs  Interpreter.hs  Main.hs  Parsing.hs  Semantics.hs  Syntax.hs  Types.hs
app/Interpreter/: BuiltIn.hs  Declaration.hs  Expr.hs  PrettyShow.hs  Program.hs  Std.hs  Util.hs  Value.hs
app/Interpreter/Std/: Boolean.hs  Numbers.hs  Shell.hs
app/Javascript/: Generate.hs
app/Parsing/: LangDef.hs  Lexer.hs  Names.hs  Operators.hs
app/Semantics/: Context.hs  Identifiers.hs
app/Syntax/: Common.hs  Declaration.hs  Expr.hs  Program.hs  Type.hs
app/Types/: Category.hs  Checker.hs
app/Types/Categories/: Base.hs
stdlib/: io.rina  list.rina  maybe.rina  string.rina
tools/vim/: rina.vim
