cabal-version:      2.4
name:               catrina
version:            0.1.0.0
synopsis:
    Catrina (rina for short) is a categorical programming language

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Maxime
maintainer:         emixampons@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable rina
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Parsing
                    , Parsing.LangDef
                    , Parsing.Names
                    , Parsing.Lexer
                    , Parsing.Operators
                    --
                    , Syntax
                    , Syntax.Expr
                    , Syntax.Type
                    , Syntax.Program
                    --
                    , Types
                    , Types.Category
                    , Types.Categories.Base
                    --
                    , Interpreter
                    , Interpreter.Util
                    , Interpreter.Value
                    , Interpreter.Expr
                    , Interpreter.BuiltIn
                    , Interpreter.Std
                    , Interpreter.Std.Numbers

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0
                    , text
                    , parsec
                    , pretty-simple
    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall
